// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UploadConfirmModal /> renders with errors 1`] = `
<ModalDialog
  hasCloseButton={false}
  isBlocking={true}
  isOpen={true}
  onClose={[MockFunction exitHandler]}
  title="Add a text description to your file"
>
  <ModalDialog.Header>
    <ModalDialog.Title>
      Add a text description to your file
    </ModalDialog.Title>
  </ModalDialog.Header>
  <ModalDialog.Body>
    <div>
      <Form.Group>
        <FormLabel>
          <strong>
            Description for: 
          </strong>
          <span
            className="file-name-ellipsis"
          >
            file1
          </span>
        </FormLabel>
        <Form.Control
          isInvalid={true}
          name="file-description"
          onChange={[MockFunction onFileDescriptionChange]}
        />
        <Form.Control.Feedback
          type="invalid"
        >
          formatMessage(messages.fileDescriptionMissingError)
        </Form.Control.Feedback>
      </Form.Group>
    </div>
  </ModalDialog.Body>
  <ModalDialog.Footer>
    <ActionRow>
      <ModalDialog.CloseButton
        onClick={[MockFunction exitHandler]}
        variant="tertiary"
      >
        Cancel upload
      </ModalDialog.CloseButton>
      <Button
        onClick={[MockFunction confirmUploadClickHandler]}
        variant="primary"
      >
        Upload files
      </Button>
    </ActionRow>
  </ModalDialog.Footer>
</ModalDialog>
`;

exports[`<UploadConfirmModal /> renders without error 1`] = `
<ModalDialog
  hasCloseButton={false}
  isBlocking={true}
  isOpen={true}
  onClose={[MockFunction exitHandler]}
  title="Add a text description to your file"
>
  <ModalDialog.Header>
    <ModalDialog.Title>
      Add a text description to your file
    </ModalDialog.Title>
  </ModalDialog.Header>
  <ModalDialog.Body>
    <div>
      <Form.Group>
        <FormLabel>
          <strong>
            Description for: 
          </strong>
          <span
            className="file-name-ellipsis"
          >
            file1
          </span>
        </FormLabel>
        <Form.Control
          isInvalid={false}
          name="file-description"
          onChange={[MockFunction onFileDescriptionChange]}
        />
      </Form.Group>
    </div>
  </ModalDialog.Body>
  <ModalDialog.Footer>
    <ActionRow>
      <ModalDialog.CloseButton
        onClick={[MockFunction exitHandler]}
        variant="tertiary"
      >
        Cancel upload
      </ModalDialog.CloseButton>
      <Button
        onClick={[MockFunction confirmUploadClickHandler]}
        variant="primary"
      >
        Upload files
      </Button>
    </ActionRow>
  </ModalDialog.Footer>
</ModalDialog>
`;
